Fix share menu vs. popup z-index

--- a/src/scss/includes/components/shareMenu.scss
+++ b/src/scss/includes/components/shareMenu.scss
@@ -1,7 +1,6 @@
 .shareMenu {
   &-menu {
     position: fixed;
-    z-index: 4;
     margin-left: -120px;
     margin-top: 10px;
     background: $background;
